<resources>
    <string name="app_name">Where Did I Go ?</string>

    <string name="action_settings">Settings</string>
    <string name="action_newtrip">Start New Trip</string>
    <string name="action_back">Back</string>

    <string name="action_rename_trip">Rename</string>
    <string name="action_delete_trip">Delete</string>
    <string name="action_end_trip">End</string>



    <string name="title_activity_main">Trips</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_checkbox_trackLocations">Track Locations</string>
    <string name="settings_summary_track_locations">Check to start tracking of locations</string>


    <string name="title_checkbox_autotrack">Auto Start New Trip</string>
    <string name="title_checkbox_autotrack_message">New Trip will be started if there is no current trip</string>

    <string name="title_checkbox_warn_startnew">Warn On Start New Trip</string>
    <string name="title_checkbox_warn_startnew_message">Warn if new trip is started when there is active current trip</string>


    <string name="title_new_trip">Start New Trip</string>
    <string name="title_trips">Trips</string>
    <string name="title_activity_current_trip">Current Trip</string>

    <string name="title_activity_trip_list">TripListActivity</string>
    <string name="title_activity_main_activity2">MainActivity2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="title_activity_trip">Trip</string>
    <string name="title_activity_start_new_trip">Start New Trip</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_settings2">Settings</string>



</resources>
